fix(buttons): prevent hover styling on disabled success buttons (#3581)

--- a/packages/design-system/ui/components/buttons/base/_index.scss
+++ b/packages/design-system/ui/components/buttons/base/_index.scss
@@ -284,6 +284,13 @@ a.slds-button--inverse:focus {
 .slds-button--success {
   @include button;
   @include button-success;
+
+  &[disabled],
+  &:disabled {
+    background: $brand-disabled;
+    border-color: $brand-disabled;
+    color: $color-text-button-brand-disabled;
+  }
 }
 
 /**
