fix(page-header): Update vertical page header to hyphenate string with no spaces (#3583)

--- a/packages/design-system/ui/components/page-headers/record-home-vertical/_index.scss
+++ b/packages/design-system/ui/components/page-headers/record-home-vertical/_index.scss
@@ -25,6 +25,10 @@
     margin-top: $spacing-x-small;
     border-top: $border-width-thin solid $color-border;
   }
+
+  .slds-page-header__name-title {
+    margin-top: $spacing-xx-small;
+  }
 }
 
 /**
