--- a/packages/design-system/ui/components/prompt/base/_index.scss
+++ b/packages/design-system/ui/components/prompt/base/_index.scss
@@ -8,7 +8,7 @@
  *
  * @name base
  * @selector .slds-modal_prompt
- * @restrict .slds-modal
+ * @restrict section[role="alertdialog"]
  * @required
  * @variant
  */
