fix(welcome-mat): Fix content vertical centering in IE11 (#3631)
* fix/welcome-mat: add style to vertically center content in IE11
* fix/welcome-mat: update release notes

--- a/packages/design-system/ui/components/welcome-mat/base/_index.scss
+++ b/packages/design-system/ui/components/welcome-mat/base/_index.scss
@@ -57,6 +57,7 @@
   background-repeat: no-repeat;
   background-size: contain;
   background-color: $welcome-mat-background-color-info;
+  align-items: center;
 }
 
 /**
