feat(icons): Add modifier to horizontally flip icons (#3646)
* Add icon flip utility class

* Add release notes

* Update docs

* Add tests

* Undo

* Add modifier

* Add tests

* Update docs

* Add dir attribute

* Update documentation and examples

* Add demo container to example

* Update tests

--- a/packages/design-system/ui/components/icons/base/_index.scss
+++ b/packages/design-system/ui/components/icons/base/_index.scss
@@ -30,6 +30,15 @@
   }
 }
 
+/**
+* @summary Horizontally flip icons
+* @selector .slds-icon_flip
+* @ restrict .slds-icon_container
+*/
+[dir="rtl"] .slds-icon_flip {
+  transform: scaleX(-1);
+}
+
 [class*='slds-icon-action-'] {
   padding: $spacing-x-small;
   border-radius: $border-radius-circle;
