feat(rtl): Add support for RTL on dropdowns and spinners (#3650)
* feat(rtl): Add support for RTL on dropdowns and spinners

* Lint

* feat(rtl): Add tokens for spinners

* feat(rtl): Add tokens for spinners

--- a/packages/design-system/ui/components/menus/dropdown/_index.scss
+++ b/packages/design-system/ui/components/menus/dropdown/_index.scss
@@ -501,3 +501,10 @@
     }
   }
 }
+
+[dir="rtl"] .slds-dropdown_center,
+[dir="rtl"] .slds-dropdown--center {
+  left: auto;
+  right: auto;
+  transform: translateX(calc(50% - (#{$square-icon-medium-content-alt} / 2)));
+}
