fix(spinners): Change syntax so parser picks up tokens (#3651)
* fix(spinners): Change syntax so parser picks up tokens

* fix(rtl): Add rtl helper mixin to deal with scope files

* Lint

--- a/packages/design-system/ui/components/icons/base/_index.scss
+++ b/packages/design-system/ui/components/icons/base/_index.scss
@@ -35,8 +35,10 @@
 * @selector .slds-icon_flip
 * @ restrict .slds-icon_container
 */
-[dir="rtl"] .slds-icon_flip {
-  transform: scaleX(-1);
+.slds-icon_flip {
+  @include rtl() {
+    transform: scaleX(-1);
+  }
 }
 
 [class*='slds-icon-action-'] {
