--- a/packages/design-system/ui/components/menus/dropdown/_index.scss
+++ b/packages/design-system/ui/components/menus/dropdown/_index.scss
@@ -502,9 +502,11 @@
   }
 }
 
-[dir="rtl"] .slds-dropdown_center,
-[dir="rtl"] .slds-dropdown--center {
-  left: auto;
-  right: auto;
-  transform: translateX(calc(50% - (#{$square-icon-medium-content-alt} / 2)));
+.slds-dropdown_center,
+.slds-dropdown--center {
+  @include rtl() {
+    left: auto;
+    right: auto;
+    transform: translateX(calc(50% - (#{$square-icon-medium-content-alt} / 2)));
+  }
 }
