chore(tokens): remove deprecated tokens, update metadata (#3655)
* chore(tokens): Remove color-foreground-primary and color-contrast-primary as a ref

* chore(tokens): Remove color-background-shade as a ref

* chore(tokens): Move out remaining deprecated tokens from ui-force background colors

* chore(tokens): Remove color-border-primary as a ref

* fix(tokens): Remove border-width tokens as a ref to fallback to globals

* chore(tokens): Moved remaining box shadow tokens to deprecated file

* chore(tokens): Remove text-color-primary ref

* chore(tokens): Remove color text link primary active ref

* chore(tokens): Move placeholder inverse token to correct file

* chore(tokens): Move remaining one salesforce theme tokens to deprecated

* chore(tokens): Clean up ui-one and remove unused imports for the framework

* Add new files

* chore(tokens): Remove font-size-small refs and replace with font-size-2

* chore(tokens): Remove font-size-medium refs and replace with font-size-3

* chore(tokens): Remove font-size-large refs and replace with font-size-5

* chore(tokens): Remove font-size-x-small refs and replace with font-size-1

* chore(tokens): Remove font-size-x-large refs and replace with font-size-8

* chore(tokens): Remove font-size-** refs and replace with font-size-**

* chore(tokens): Remove font-size-text-** refs and replace with font-size-**

* chore(tokens): replace more deprecated tokens

* chore(tokens): Update metadata to match expectations

* Lint

* Update test

* Update typography scss to fix test

--- a/packages/design-system/ui/components/avatar/base/_index.scss
+++ b/packages/design-system/ui/components/avatar/base/_index.scss
@@ -98,7 +98,7 @@
 .slds-avatar_x-small,
 .slds-avatar--x-small {
   @include square($square-icon-x-small-boundary);
-  font-size: $font-size-heading-xx-small;
+  font-size: $font-size-1;
 
   .slds-icon {
     @include square($square-icon-x-small-boundary);
@@ -116,7 +116,7 @@
 .slds-avatar_small,
 .slds-avatar--small {
   @include square($square-icon-small-boundary);
-  font-size: $font-size-heading-xx-small;
+  font-size: $font-size-1;
 
   .slds-icon {
     @include square($square-icon-small-boundary);
@@ -152,7 +152,7 @@
 .slds-avatar_large,
 .slds-avatar--large {
   @include square($square-icon-large-boundary);
-  font-size: $font-size-heading-medium;
+  font-size: $font-size-6;
   font-weight: $font-weight-light;
   line-height: $line-height-heading;
 
