--- a/packages/design-system/ui/components/cards/base/_index.scss
+++ b/packages/design-system/ui/components/cards/base/_index.scss
@@ -90,7 +90,7 @@
   padding: $var-spacing-vertical-small $var-spacing-horizontal-medium;
   margin-top: $var-spacing-vertical-small;
   text-align: $card-footer-text-align;
-  font-size: $font-size-text-small;
+  font-size: $font-size-3;
   border-top: $border-width-thin solid $card-footer-color-border;
 }
 
