--- a/packages/design-system/ui/components/carousel/base/_index.scss
+++ b/packages/design-system/ui/components/carousel/base/_index.scss
@@ -100,7 +100,7 @@
  * @restrict .slds-carousel__content h2
  */
 .slds-carousel__content-title {
-  font-size: $font-size-text-medium;
+  font-size: $font-size-5;
   font-weight: 600;
 }
 
