--- a/packages/design-system/ui/components/checkbox-toggle/base/_index.scss
+++ b/packages/design-system/ui/components/checkbox-toggle/base/_index.scss
@@ -65,7 +65,7 @@
      */
     + .slds-checkbox_faux_container,
     + .slds-checkbox--faux_container {
-      font-size: $font-size-x-small;
+      font-size: $font-size-1;
       color: $color-text-label;
 
       /**
