--- a/packages/design-system/ui/components/color-picker/base/_index.scss
+++ b/packages/design-system/ui/components/color-picker/base/_index.scss
@@ -21,7 +21,7 @@
   .slds-form-error {
     padding-top: $spacing-x-small;
     color: $color-text-error;
-    font-size: $font-size-text-x-small;
+    font-size: $font-size-2;
   }
 }
 
