--- a/packages/design-system/ui/components/feeds/post/_index.scss
+++ b/packages/design-system/ui/components/feeds/post/_index.scss
@@ -69,7 +69,7 @@
    */
   &__footer {
     display: flex;
-    font-size: $font-size-small;
+    font-size: $font-size-2;
     flex-direction: column;
 
     @include mq-medium-min {
