--- a/packages/design-system/ui/components/form-element/base/_index.scss
+++ b/packages/design-system/ui/components/form-element/base/_index.scss
@@ -75,7 +75,7 @@
  */
 .slds-form-element__help,
 .slds-form-element__helper {
-  font-size: $font-size-small;
+  font-size: $font-size-2;
   margin-top: $spacing-xxx-small;
   display: block;
 }
