--- a/packages/design-system/ui/components/global-header/global-actions/_index.scss
+++ b/packages/design-system/ui/components/global-header/global-actions/_index.scss
@@ -235,7 +235,7 @@
   min-width: 1rem;
   min-height: 1rem;
   text-align: center;
-  font-size: $font-size-text-xx-small;
+  font-size: $font-size-1;
   padding: 0 $spacing-xxx-small;
   opacity: 0;
   pointer-events: none;
