--- a/packages/design-system/ui/components/global-navigation/navigation-bar/_index.scss
+++ b/packages/design-system/ui/components/global-navigation/navigation-bar/_index.scss
@@ -329,7 +329,7 @@
     border-radius: 0;
     min-width: 0%;
     color: inherit;
-    font-size: $font-size-medium;
+    font-size: $font-size-3;
     z-index: 1;
 
     &:focus,
