--- a/packages/design-system/ui/components/scoped-tabs/base/_index.scss
+++ b/packages/design-system/ui/components/scoped-tabs/base/_index.scss
@@ -31,7 +31,7 @@
 .slds-tabs_scoped__nav,
 .slds-tabs--scoped__nav {
   @include tabs-nav;
-  background-color: $color-contrast-primary;
+  background-color: $color-gray-2;
   border: $border-width-thin solid $color-border-button-default;
   border-radius: $border-radius-medium $border-radius-medium 0 0;
 }
@@ -65,7 +65,7 @@
  */
 .slds-tabs_scoped__content,
 .slds-tabs--scoped__content {
-  background-color: $color-foreground-primary;
+  background-color: $color-background-alt;
   border: $border-width-thin solid $color-border-button-default;
   border-top: 0;
   border-radius: 0 0 $border-radius-medium $border-radius-medium;
@@ -128,7 +128,7 @@
 .slds-active .slds-tabs--scoped__link,
 .slds-is-active .slds-tabs_scoped__link,
 .slds-is-active .slds-tabs--scoped__link {
-  background-color: $color-foreground-primary;
+  background-color: $color-background-alt;
   border-color: $color-border;
   font-weight: $tabs-font-weight;
   color: $color-text-action-label-active;
