--- a/packages/design-system/ui/components/split-view/base/_index.scss
+++ b/packages/design-system/ui/components/split-view/base/_index.scss
@@ -97,7 +97,7 @@
   display: flex;
   position: relative;
   border-bottom: $border-width-thin solid $split-view-color-border;
-  font-size: $font-size-text-x-small;
+  font-size: $font-size-2;
 
   &:hover,
   &:focus {
