--- a/packages/design-system/ui/components/tabs/mobile-stack/_index.scss
+++ b/packages/design-system/ui/components/tabs/mobile-stack/_index.scss
@@ -56,7 +56,7 @@
   height: $square-tappable;
   align-items: stretch;
   color: $color-text-tab-label;
-  font-size: $font-size-text-medium;
+  font-size: $font-size-5;
   padding: 0 $spacing-small;
 
   &:active {
