--- a/packages/design-system/ui/components/welcome-mat/base/_index.scss
+++ b/packages/design-system/ui/components/welcome-mat/base/_index.scss
@@ -182,7 +182,7 @@
  */
 .slds-welcome-mat__tile-description {
   color: $color-text-weak;
-  font-size: $font-size-text-x-small;
+  font-size: $font-size-2;
   line-height: $line-height-text;
 }
 
