--- a/packages/design-system/ui/dependencies/_core.scss
+++ b/packages/design-system/ui/dependencies/_core.scss
@@ -12,7 +12,7 @@
   ::placeholder {
     color: $color-text-placeholder;
     font-weight: $font-weight-regular;
-    font-size: $font-size-medium;
+    font-size: $font-size-5;
   }
 
   ::selection {
