--- a/packages/design-system/ui/dependencies/_popover.scss
+++ b/packages/design-system/ui/dependencies/_popover.scss
@@ -1,7 +1,7 @@
 // Copyright (c) 2015-present, salesforce.com, inc. All rights reserved
 // Licensed under BSD 3-Clause - see LICENSE.txt or git.io/sfdc-license
 
-@mixin nubbin($position: bottom, $location: "after", $color: $color-background-alt, $size: $square-tooltip-nubbin) {
+@mixin nubbin($position: bottom, $location: "after", $color: $color-background-alt, $size: $nubbin-size-default) {
 
   &:#{$location} {
     @include square($size);
@@ -40,7 +40,7 @@
   position: relative;
   border-radius: $border-radius-medium;
   width: $size-medium;
-  min-height: ($square-tooltip-nubbin * 2);
+  min-height: ($nubbin-size-default * 2);
   z-index: $z-index-dialog;
   background-color: $color;
   display: inline-block;
