--- a/packages/design-system/ui/utilities/text/_index.scss
+++ b/packages/design-system/ui/utilities/text/_index.scss
@@ -9,7 +9,7 @@
  */
 .slds-text-body_regular,
 .slds-text-body--regular {
-  font-size: $font-size-medium;
+  font-size: $font-size-3;
 }
 
 /**
@@ -20,7 +20,7 @@
  */
 .slds-text-body_small,
 .slds-text-body--small {
-  font-size: $font-size-small;
+  font-size: $font-size-2;
 }
 
 
@@ -33,7 +33,7 @@
 .slds-text-heading_large,
 .slds-text-heading--large {
   font-weight: $font-weight-light;
-  font-size: $font-size-xx-large;
+  font-size: $font-size-9;
   line-height: $line-height-heading;
 }
 
@@ -46,7 +46,7 @@
 .slds-text-heading_medium,
 .slds-text-heading--medium {
   font-weight: $font-weight-light;
-  font-size: $font-size-x-large;
+  font-size: $font-size-7;
   line-height: $line-height-heading;
 }
 
@@ -58,7 +58,7 @@
  */
 .slds-text-heading_small,
 .slds-text-heading--small {
-  font-size: $font-size-large;
+  font-size: $font-size-5;
   line-height: $line-height-heading;
 }
 
