--- a/packages/design-system/ui/components/activity-timeline/base/_index.scss
+++ b/packages/design-system/ui/components/activity-timeline/base/_index.scss
@@ -175,7 +175,7 @@
  */
 .slds-timeline__date {
   margin-bottom: $spacing-xx-small;
-  font-size: $font-size-small;
+  font-size: $font-size-2;
   color: $color-text-weak;
 }
 
