--- a/packages/design-system/ui/components/menus/dropdown/_deprecate.scss
+++ b/packages/design-system/ui/components/menus/dropdown/_deprecate.scss
@@ -32,7 +32,7 @@
     &--nubbin-top {
       @include nubbin(top, 'before');
       @include nubbin(top);
-      margin-top: ($square-tooltip-nubbin / 2);
+      margin-top: ($nubbin-size-default / 2);
 
       &:before {
         background: $color-background-alt;
