--- a/packages/design-system/ui/components/page-headers/base/_index.scss
+++ b/packages/design-system/ui/components/page-headers/base/_index.scss
@@ -162,7 +162,7 @@
 
 .slds-page-header__name-meta {
   @include truncate;
-  font-size: $font-size-small;
+  font-size: $font-size-2;
   padding-right: $spacing-x-small;
 }
 
