--- a/packages/design-system/ui/components/rich-text-editor/base/_index.scss
+++ b/packages/design-system/ui/components/rich-text-editor/base/_index.scss
@@ -520,16 +520,16 @@
   hyphens: manual;
 
   h1 {
-    font-size: $font-size-heading-large;
+    font-size: $font-size-8;
   }
 
   h2 {
-    font-size: $font-size-heading-medium;
+    font-size: $font-size-6;
     font-weight: $font-weight-bold;
   }
 
   h3 {
-    font-size: $font-size-heading-medium;
+    font-size: $font-size-6;
   }
 
   h4 {
@@ -542,7 +542,7 @@
   }
 
   h6 {
-    font-size: $font-size-heading-x-small;
+    font-size: $font-size-2;
     font-weight: $font-weight-bold;
   }
 
