--- a/packages/design-system/ui/components/tabs/mobile-stack/_deprecate.scss
+++ b/packages/design-system/ui/components/tabs/mobile-stack/_deprecate.scss
@@ -12,7 +12,7 @@
     width: 100%;
     height: 100%;
     color: $color-text-tab-label;
-    font-size: $font-size-text-medium;
+    font-size: $font-size-5;
     padding: 0 $spacing-medium;
 
     .slds-button:focus {
