--- a/packages/design-system/ui/components/tooltips/base/_deprecate.scss
+++ b/packages/design-system/ui/components/tooltips/base/_deprecate.scss
@@ -8,7 +8,7 @@
 
     &__body {
       padding: $spacing-x-small $spacing-small;
-      font-size: $font-size-small;
+      font-size: $font-size-2;
       color: $color-text-inverse;
     }
   }
