--- a/packages/design-system/ui/components/tooltips/base/_index.scss
+++ b/packages/design-system/ui/components/tooltips/base/_index.scss
@@ -24,7 +24,7 @@
   border: 0;
 
   .slds-popover__body {
-    font-size: $font-size-small;
+    font-size: $font-size-2;
     color: $color-text-inverse;
   }
 }
