--- a/packages/design-system/ui/dependencies/_dropdowns.scss
+++ b/packages/design-system/ui/dependencies/_dropdowns.scss
@@ -11,7 +11,7 @@
 /// @param $icon {String} Size of icon in list items
 @mixin dropdown-overflow-length(
   $length,
-  $font-size: $font-size-medium,
+  $font-size: $font-size-5,
   $line-height: $line-height-text,
   $padding: $spacing-medium,
   $icon-size: null
