fix(rtl): Fix issue where tokens wont transform (#3677)

--- a/packages/design-system/ui/components/menus/dropdown/_index.scss
+++ b/packages/design-system/ui/components/menus/dropdown/_index.scss
@@ -507,6 +507,6 @@
   @include rtl() {
     left: auto;
     right: auto;
-    transform: translateX(calc(50% - (#{$square-icon-medium-content-alt} / 2)));
+    transform: translateX(calc(50% - (0.875rem / 2)));
   }
 }
