--- a/packages/design-system/ui/components/radio-group/base/_index.scss
+++ b/packages/design-system/ui/components/radio-group/base/_index.scss
@@ -59,6 +59,8 @@
         content: '';
         position: absolute;
         top: 50%;
+        /* stylelint-disable comment-empty-line-before */
+        /*! @noflip */
         left: 50%;
         transform: translate3d(-50%, -50%, 0);
         border-radius: $border-radius-circle;
